# shogi-app

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/shogi_app/: __init__.py  app.py  logic.py  ui_tk.py
tests/: test_logic.py
